Fix spacing between translations and right rail in dashboard
The list of translations was too close to the panel on the right.
Now the panel has the same space with respect to both sides.

Bug: T107564

--- a/modules/dashboard/styles/ext.cx.translationlist.less
+++ b/modules/dashboard/styles/ext.cx.translationlist.less
@@ -28,7 +28,7 @@
 	.mw-ui-item;
 	.mw-ui-two-thirds;
 
-	padding: 0;
+	padding: 0 10px 0 0;
 	background-color: #f0f0f0;
 }
 
